LoadStoreMachine/LoadStoreMachine/logs/hls_run_csim_33844.backup.log
  **** HLS Build v2025.1 6135595
INFO: [HLS 200-2005] Using work_dir C:/Projects/Xilinx/LoadStore/LoadStoreMachine/LoadStoreMachine 
INFO: [HLS 200-2176] Writing Vitis IDE component file C:/Projects/Xilinx/LoadStore/LoadStoreMachine/LoadStoreMachine/vitis-comp.json
INFO: [HLS 200-10] Creating and opening component 'C:/Projects/Xilinx/LoadStore/LoadStoreMachine/LoadStoreMachine'.
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2025.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-2174] Applying component config ini file C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg
INFO: [HLS 200-1465] Applying config ini 'syn.file=./loadstore.cpp' from C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg(9)
INFO: [HLS 200-10] Adding design file 'C:/Projects/Xilinx/LoadStore/LoadStoreMachine/loadstore.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.file=./loadstore.h' from C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg(10)
INFO: [HLS 200-10] Adding design file 'C:/Projects/Xilinx/LoadStore/LoadStoreMachine/loadstore.h' to the project
INFO: [HLS 200-1465] Applying config ini 'tb.file=./test_lsm.cpp' from C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg(11)
INFO: [HLS 200-10] Adding test bench file 'C:/Projects/Xilinx/LoadStore/LoadStoreMachine/test_lsm.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.top=execute' from C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg(12)
INFO: [HLS 200-1465] Applying config ini 'flow_target=vivado' from C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2025.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying config ini 'part=xc7z007sclg225-2' from C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xc7z007s-clg225-2'
INFO: [HLS 200-1465] Applying config ini 'clock=10ns' from C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg(7)
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1465] Applying config ini 'clock_uncertainty=27%' from C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg(8)
INFO: [SYN 201-201] Setting up clock 'default' with an uncertainty of 2.7ns.
INFO: [HLS 200-1465] Applying config ini 'cosim.rtl=vhdl' from C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg(14)
INFO: [HLS 200-1465] Applying config ini 'cosim.trace_level=all' from C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg(13)
INFO: [HLS 200-1465] Applying config ini 'package.output.format=ip_catalog' from C:/Projects/Xilinx/LoadStore/LoadStoreMachine/hls_config.cfg(5)
INFO: [HLS 200-2176] Writing Vitis IDE component file C:/Projects/Xilinx/LoadStore/LoadStoreMachine/LoadStoreMachine/vitis-comp.json
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../test_lsm.cpp in debug mode
csim.mk:88: recipe for target 'obj/test_lsm.o' failed
In file included from ../../../../test_lsm.cpp:1:
In file included from ../../../../loadstore.h:4:
In file included from C:/Xilinx/2025.1/Vitis/include/ap_int.h:10:
In file included from C:/Xilinx/2025.1/Vitis/include/etc/ap_common.h:677:
In file included from C:/Xilinx/2025.1/Vitis/include/etc/ap_private.h:68:
In file included from C:/Xilinx/2025.1/Vitis/include/hls_half.h:26:
In file included from C:/Xilinx/2025.1/Vitis/include/etc/hls_half_fpo.h:19:
In file included from C:/Xilinx/2025.1/Vitis/include/hls_fpo.h:140:
In file included from C:/Xilinx/2025.1/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/Xilinx/2025.1/Vitis/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/Xilinx/2025.1/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
../../../../test_lsm.cpp:15:25: error: too many arguments provided to function-like macro invocation
    assert(result_reg1, 0x0000000A);
                        ^
C:/Xilinx/2025.1/Vitis/tps/mingw/10.0.0/win64.o/nt/x86_64-w64-mingw32/include/assert.h:50:9: note: macro 'assert' defined here
#define assert(_Expression) \
        ^
../../../../test_lsm.cpp:15:5: error: use of undeclared identifier 'assert'; did you mean '_assert'?
    assert(result_reg1, 0x0000000A);
    ^~~~~~
    _assert
C:/Xilinx/2025.1/Vitis/tps/mingw/10.0.0/win64.o/nt/x86_64-w64-mingw32/include/assert.h:25:22: note: '_assert' declared here
_CRTIMP void __cdecl _assert (const char *_Message, const char *_File, unsigned _Line);
                     ^
../../../../test_lsm.cpp:16:25: error: too many arguments provided to function-like macro invocation
    assert(result_reg2, 0x00000014);
                        ^
C:/Xilinx/2025.1/Vitis/tps/mingw/10.0.0/win64.o/nt/x86_64-w64-mingw32/include/assert.h:50:9: note: macro 'assert' defined here
#define assert(_Expression) \
        ^
../../../../test_lsm.cpp:16:5: error: use of undeclared identifier 'assert'; did you mean '_assert'?
    assert(result_reg2, 0x00000014);
    ^~~~~~
    _assert
C:/Xilinx/2025.1/Vitis/tps/mingw/10.0.0/win64.o/nt/x86_64-w64-mingw32/include/assert.h:25:22: note: '_assert' declared here
_CRTIMP void __cdecl _assert (const char *_Message, const char *_File, unsigned _Line);
                     ^
../../../../test_lsm.cpp:38:5: error: use of undeclared identifier 'lsm_instance'
    lsm_instance.set_register(6, 0x0F);
    ^
../../../../test_lsm.cpp:48:5: error: use of undeclared identifier 'lsm_instance'
    lsm_instance.set_register(8, 0xF0);
    ^
../../../../test_lsm.cpp:15:5: warning: expression result unused [-Wunused-value]
    assert(result_reg1, 0x0000000A);
    ^~~~~~
../../../../test_lsm.cpp:16:5: warning: expression result unused [-Wunused-value]
    assert(result_reg2, 0x00000014);
    ^~~~~~
3 warnings and 6 errors generated.
make: *** [obj/test_lsm.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 1 seconds. Total CPU system time: 2 seconds. Total elapsed time: 6.412 seconds; peak allocated memory: 135.848 MB.
